--- a/index.html
+++ b/index.html
@@ -16,5 +16,22 @@
             <button class="p-btn">Donate Now</button>
         </div>
     </section>
+    <section>
+        <div class="donate">
+            <h2 class="donate-h">Donate Today</h2>
+            <p class="donate-dsc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="amount">
+            <div class="taka">100tk</div>
+            <div class="taka">200tk</div>
+            <div class="taka">500tk</div>
+            <div class="taka">1000tk</div>
+            <div class="taka">5000tk</div>
+        </div>
+        <div class="other-a">
+            <input class="o-amount" type="text" placeholder="Other Amount (Taka)">
+        </div>
+        <button class="p-btn">Donate Now</button>
+    </section>
 </body>
 </html>
