--- a/index.html
+++ b/index.html
@@ -33,5 +33,28 @@
         </div>
         <button class="p-btn">Donate Now</button>
     </section>
+    <section>
+        <div class="donate">
+            <h2 class="donate-h">Our Donate Plan</h2>
+            <p class="donate-dsc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="plan">
+            <div class="plan1">
+                <img src="/icons/food.png" alt="">
+                <h4 class="plan-h">Food for a family</h4>
+                <p class="plan-dsc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div class="plan2">
+                <img src="/icons/shelter.png" alt="shelter">
+                <h4 class="plan-h">Shelter for a family</h4>
+                <p class="plan-dsc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div class="plan3">
+                <img src="/icons/Frame-1.png" alt="">
+                <h4 class="plan-h">Education for a child</h4>
+                <p class="plan-dsc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
