--- a/index.html
+++ b/index.html
@@ -56,5 +56,27 @@
             </div>
         </div>
     </section>
+    <section class="contibute">
+        <div class="don-dsc">
+            <h2 class="donate-h">Their lives depend on your donation</h1>
+            <p class="donate-dsc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="donate-dsc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <button class="p-btn">How to Contribute?</button>
+        </div>
+        <div class="don-img">
+            <img src="/images/donation9.jpg" alt="">
+        </div>
+    </section>
+    <section class="contibute">
+        <div class="don-img">
+            <img src="/images/donation10.jpg" alt="">
+        </div>
+        <div class="don-dsc">
+            <h2 class="donate-h">They need us to suvive</h1>
+            <p class="donate-dsc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="donate-dsc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <button class="p-btn">How to Contribute?</button>
+        </div>
+    </section>
 </body>
 </html>
