--- a/index.html
+++ b/index.html
@@ -78,5 +78,21 @@
             <button class="p-btn">How to Contribute?</button>
         </div>
     </section>
+    <section  class="contact">
+        <div>
+            <h2  class="donate-h">Get My Updates</h2>
+            <p class="donate-dsc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim </p>
+    </div>
+    <div class="subs">
+        <input class="email" type="email" placeholder="   Email">
+        <button class="p-btn1">Subscribe</button>
+    </div>
+    </section>
+    <footer class="footer">
+        <div class="fot">
+            <h3 class="f-headline">Be Humble</h3>
+            <p class="f-para">I’m gonna do it</p>
+        </div>
+    </footer>
 </body>
 </html>
