--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Donate Today</title>
 </head>
 <body>
@@ -40,17 +40,17 @@
         </div>
         <div class="plan">
             <div class="plan1">
-                <img src="/icons/food.png" alt="">
+                <img src="./icons/food.png" alt="">
                 <h4 class="plan-h">Food for a family</h4>
                 <p class="plan-dsc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
             </div>
             <div class="plan2">
-                <img src="/icons/shelter.png" alt="shelter">
+                <img src="./icons/shelter.png" alt="shelter">
                 <h4 class="plan-h">Shelter for a family</h4>
                 <p class="plan-dsc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
             </div>
             <div class="plan3">
-                <img src="/icons/Frame-1.png" alt="">
+                <img src="./icons/Frame-1.png" alt="">
                 <h4 class="plan-h">Education for a child</h4>
                 <p class="plan-dsc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
             </div>
@@ -64,12 +64,12 @@
             <button class="p-btn">How to Contribute?</button>
         </div>
         <div class="don-img">
-            <img src="/images/donation9.jpg" alt="">
+            <img src="./images/donation9.jpg" alt="">
         </div>
     </section>
     <section class="contibute">
         <div class="don-img">
-            <img src="/images/donation10.jpg" alt="">
+            <img src="./images/donation10.jpg" alt="">
         </div>
         <div class="don-dsc">
             <h2 class="donate-h">They need us to suvive</h1>
