--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Donate Today</title>
 </head>
 <body>
-    <section>
-        <div class="banner">
+    <section class="banner">
+        <div class="container">
             <h1 class="h-line">Let’s Help Those Who Are More In Need</h1>
             <p class="dsc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
             <button class="p-btn">Donate Now</button>
